--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -292,4 +292,6 @@ $font-14: 1.094vw;
 
   --scale-dropdown-list: 37.5;
   --scale-input-field-padding: 2.125;
+  --scale-formheading--padding-x: 4.75;
+  --scale-formheading--padding-y: 3;
 }
